# i-learn-rust

./: .gitignore  Cargo.toml  README.md
data/: sample.csv
src/csvprof/: Cargo.toml  main.rs
src/logpeek/: Cargo.toml  main.rs
src/nvader/: Cargo.toml  chunking.rs  cli.rs  core.rs  embeddings.rs  loaders.rs  main.rs  pdf2md.rs  pipeline.rs  vector_store.rs
test_data/: nvt-sg.md
