[package]
name = "nvader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nvader"
path = "main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
openai_api_rust = "0.1.9"
clap = { version = "4", features = ["derive"] }
colored = "2"
dotenv = "0.15.0"